[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/dogicapixelbold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://mainscreensoundsliders.gd" type="Script" id=2]
[ext_resource path="res://title.png" type="Texture" id=3]
[ext_resource path="res://UI/masterSlider.gd" type="Script" id=4]
[ext_resource path="res://UI/sfxSlider.gd" type="Script" id=5]
[ext_resource path="res://UI/musicSlider.gd" type="Script" id=6]

[sub_resource type="GDScript" id=7]
script/source = "extends Node2D


func _ready():
	
	find_node(\"WorldEnvironment\").environment.adjustment_brightness = MainGlobals.brightness
	find_node(\"WorldEnvironment\").environment.adjustment_contrast = MainGlobals.contrast
	find_node(\"WorldEnvironment\").environment.adjustment_saturation = MainGlobals.saturation


"

[sub_resource type="Environment" id=8]
background_mode = 4
adjustment_enabled = true

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 1 )

[node name="mainscreensound" type="Node2D"]
script = SubResource( 7 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 8 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1027.0
margin_bottom = 619.0
color = Color( 0, 0, 0, 0.392157 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 508, 287 )
scale = Vector2( 3.6, 3.6 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 1, 300, 176 )

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 300.0
margin_top = 116.0
margin_right = 727.0
margin_bottom = 550.0
rect_pivot_offset = Vector2( 227, 15 )
color = Color( 0.541176, 0.521569, 0.807843, 0.462745 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 343.0
margin_top = 33.0
margin_right = 937.0
margin_bottom = 115.0
custom_fonts/normal_font = SubResource( 10 )
text = "Sound Settings"

[node name="Control" type="Control" parent="."]
margin_left = 320.0
margin_top = 239.0
margin_right = 360.0
margin_bottom = 279.0
script = ExtResource( 2 )

[node name="masterSlider" type="HSlider" parent="Control"]
margin_right = 384.0
margin_bottom = 16.0
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource( 4 )

[node name="button6" type="Sprite" parent="Control/masterSlider"]
modulate = Color( 0.737255, 0.737255, 0.933333, 1 )
position = Vector2( 192.5, -56 )
scale = Vector2( 5.04054, 4 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 113, 251, 74, 23 )

[node name="RichTextLabel2" type="RichTextLabel" parent="Control/masterSlider"]
margin_left = 86.0
margin_top = -71.0
margin_right = 449.0
margin_bottom = 4.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 11 )
text = "Master (1)
"

[node name="musicSlider" type="HSlider" parent="Control"]
margin_left = 1.0
margin_top = 143.0
margin_right = 385.0
margin_bottom = 159.0
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource( 6 )

[node name="button11" type="Sprite" parent="Control/musicSlider"]
modulate = Color( 0.737255, 0.737255, 0.933333, 1 )
position = Vector2( 191, -54 )
scale = Vector2( 5.04054, 4 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 113, 251, 74, 23 )

[node name="RichTextLabel2" type="RichTextLabel" parent="Control/musicSlider"]
margin_left = 95.0
margin_top = -65.0
margin_right = 510.0
margin_bottom = 10.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 11 )
text = "Music (2)"

[node name="sfxSlider" type="HSlider" parent="Control"]
margin_left = 1.0
margin_top = 284.0
margin_right = 385.0
margin_bottom = 300.0
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource( 5 )

[node name="button12" type="Sprite" parent="Control/sfxSlider"]
modulate = Color( 0.737255, 0.737255, 0.933333, 1 )
position = Vector2( 191, -51 )
scale = Vector2( 5.04054, 4 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 113, 251, 74, 23 )

[node name="RichTextLabel2" type="RichTextLabel" parent="Control/sfxSlider"]
margin_left = 126.0
margin_top = -62.0
margin_right = 463.0
margin_bottom = 13.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 11 )
text = "SFX (3)"

[node name="Return" type="TextureButton" parent="Control"]
margin_left = -304.0
margin_top = -172.0
margin_right = -95.0
margin_bottom = -116.0

[node name="button8" type="Sprite" parent="Control/Return"]
modulate = Color( 0.737255, 0.737255, 0.933333, 1 )
position = Vector2( 105, -14 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 113, 251, 74, 23 )

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Return"]
margin_left = 34.0
margin_top = -21.0
margin_right = 204.0
margin_bottom = 19.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 13 )
text = "Back (esc)"

[connection signal="value_changed" from="Control/masterSlider" to="Control/masterSlider" method="_on_masterSlider_value_changed"]
[connection signal="value_changed" from="Control/musicSlider" to="Control/musicSlider" method="_on_musicSlider_value_changed"]
[connection signal="value_changed" from="Control/sfxSlider" to="Control/sfxSlider" method="_on_sfxSlider_value_changed"]
[connection signal="pressed" from="Control/Return" to="Control" method="_on_Return_pressed"]
